feat: add http-address to /v1/system-info (#606)
Per discussion on Matrix > Juju, we'd like to add the ability to get the
HTTP port that Pebble is listening on (if any) to the /v1/system-info
API response. This PR simply adds that field.

For example, if the Pebble daemon is started with `pebble run
--http=:4040`, the API returns this:

```
$ curl --unix-socket /var/lib/pebble/default/.pebble.socket http://_/v1/system-info|jq
{
  "type": "sync",
  "status-code": 200,
  "status": "OK",
  "result": {
    "boot-id": "30435cc9-b428-4e25-a821-c9477fc339eb",
    "http-address": ":4040",
    "version": "v1.21.0-dev"
  }
}
```
